@@ -1,5 +1,10 @@
 2015-05-17  Mark Wielaard  <mjw@redhat.com>
 
+	* eblobjnote.c (ebl_object_note): If allocation buf is large, then
+	allocate it with malloc.
+
+2015-05-17  Mark Wielaard  <mjw@redhat.com>
+
 	* eblopenbackend.c (MAX_PREFIX_LEN): New define (16).
 	(openbackend): Stack allocate symname array using MAX_PREFIX_LEN.
 
